<resources>
    <string name="app_name">Pokedex</string>

    <!-- Activity About -->
    <string name="about">Sobre o aplicativo</string>
    <string name="subAbout">Para que serve esse aplicativo?</string>
    <string name="versionTitle">Versão do aplicativo</string>
    <string name="version">1.0.1</string>
    <string name="description">A Pokédex, também conhecida como Poké-Agenda aqui no Brasil é uma enciclopédia virtual portátil de alta tecnologia que os treinadores Pokémon transportam para registra todas as espécies diferentes de Pokémon que são encontradas durante a sua viagem como treinadores.</string>
    <string name="back_button">voltar</string>

    <!-- Activity Header Home -->
    <string name="titleHome">Pokemons</string>
    <string name="searchButton">Search</string>
    <string name="infoButton">Sobre o aplicativo</string>
    <string name="SpecSearchButton">Pesquisar por um pokémon</string>

    <!-- Activity Header Home -->
    <string name="pokeEvolution">Evolui para</string>

    <!-- Activity Pokemons-->
    <string name="pokemon_n">#</string>
    <string name="pokemon_id">001</string>
    <string name="pokemon_name">Bulbasour</string>
    <string name="pokedex_number">Número na pokedéx: </string>
    <string name="pokemon_type">""</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragment Stats-->
    <string name="stats_title_1">Weaknesses</string>
    <string name="stats_title_2">Resistences</string>
    <string name="stats">STATS</string>
    <string name="evolutions">EVOLUTIONS</string>
    <string name="abilities">ABILITIES</string>
    <string name="weakness">Fraco contra pokémonsdo tipo: </string>

    <!-- Pomenons Type-->
    <string name="Fire">Fire</string>
    <string name="Water">Water</string>
    <string name="Ice">Ice</string>
    <string name="Grass">Grass</string>
    <string name="Poison">Poison</string>
    <string name="Fighting">Fighting</string>
    <string name="Rock">Rock</string>
    <string name="Flying">Flying</string>
    <string name="Dragon">Dragon</string>
    <string name="Electric">Electric</string>
    <string name="Bug">Bug</string>
    <string name="Psychic">Psychic</string>
    <string name="Ground">Ground</string>
    <string name="Fairy">Fairy</string>
    <string name="Dark">Dark</string>
    <string name="Ghost">Ghost</string>
    <string name="Steel">Steel</string>
    <string name="Normal">Normal</string>
    <string name="water">Water</string>




</resources>