<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".presentation.about.AboutActivity">


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@drawable/splash_gradient_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/avenirmedium"
        android:text="@string/about"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:accessibilityHeading="true"/>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:background="@drawable/splash_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@color/colorInfoAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/avenirmedium"
        android:text="@string/subAbout"
        android:textColor="@color/colorSubTitle"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/avenirbook"
        android:lineSpacingExtra="2sp"
        android:text="@string/description"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenirmedium"
        android:text="@string/versionTitle"
        android:textColor="@color/colorSubTitle"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirbook"
        android:text="@string/version"
        android:textColor="@color/colorText"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/backButtonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:focusable="true"
        android:contentDescription="@string/back_button"
        android:importantForAccessibility="yes"/>


</androidx.constraintlayout.widget.ConstraintLayout>