<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@android:color/white">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_size_108_dp"
        android:background="@drawable/splash_gradient_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_size_8_dp"
        android:background="@drawable/splash_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

    <TextView
        android:id="@+id/txtTitleHeader"
        android:layout_width="@dimen/default_size_205_dp"
        android:layout_height="@dimen/default_size_27_dp"
        android:layout_marginTop="@dimen/default_size_11_dp"
        android:accessibilityHeading="true"
        android:focusable="true"
        android:fontFamily="@font/avenir_medium"
        android:importantForAccessibility="yes"
        android:text="@string/titleHome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_20_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/infoButtonHeader"
        android:layout_width="@dimen/default_size_24_dp"
        android:layout_height="@dimen/default_size_24_dp"
        android:layout_marginTop="@dimen/default_size_11_dp"
        android:layout_marginEnd="@dimen/default_size_16_dp"
        android:background="@drawable/ic_help_outline"
        android:contentDescription="@string/infoButton"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_36_dp"
        android:layout_marginStart="@dimen/default_size_16_dp"
        android:layout_marginTop="@dimen/default_size_24_dp"
        android:layout_marginEnd="@dimen/default_size_16_dp"
        android:background="@drawable/background_search_button"
        android:contentDescription="@string/SpecSearchButton"
        android:fontFamily="@font/avenir_medium"
        android:iconifiedByDefault="false"
        android:importantForAccessibility="yes"
        android:orientation="horizontal"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/default_size_0_dp"
        android:layout_height="@dimen/default_size_0_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>